-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
A few tests now fail with "-XX:FlatArrayElementMaxOops=0 -XX:-UseArrayFlattening -XX:-UseFieldFlattening":
----------System.out:(4/268)----------
Offset of nonstatic field java/lang/Float.value is deserialized as 12 but should really be 16.
Offset of nonstatic field java/lang/Integer.value is deserialized as 12 but should really be 16.
Error occurred during initialization of VM
Field offset verification failed
Tests that fail:
- compiler/valhalla/inlinetypes/TestArrayNullMarkers.java
- compiler/valhalla/inlinetypes/TestFieldNullMarkers.java
- compiler/valhalla/inlinetypes/TestTearing.java
----------System.out:(4/268)----------
Offset of nonstatic field java/lang/Float.value is deserialized as 12 but should really be 16.
Offset of nonstatic field java/lang/Integer.value is deserialized as 12 but should really be 16.
Error occurred during initialization of VM
Field offset verification failed
Tests that fail:
- compiler/valhalla/inlinetypes/TestArrayNullMarkers.java
- compiler/valhalla/inlinetypes/TestFieldNullMarkers.java
- compiler/valhalla/inlinetypes/TestTearing.java
- blocks
-
JDK-8341767 [lworld] JIT support for nullable, atomic, flat arrays
-
- Resolved
-
- links to
-
Commit(lworld)
openjdk/valhalla/0ab54947
-
Review(lworld)
openjdk/valhalla/1393