8351483: [lworld] Field offset verification fails